feat : JSON and Update concurrency
Sửa Serialization (qua thư viện Jackson) thành JSON